--- a/app/src/main/res/layout/content_form_edit_profil.xml
+++ b/app/src/main/res/layout/content_form_edit_profil.xml
@@ -256,13 +256,21 @@
                 android:layout_marginBottom="@dimen/xmin_padding"
                 android:orientation="vertical"
                 android:padding="@dimen/xmin_padding"
-                android:visibility="gone">
+                android:visibility="visible">
 
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="Kecamatan"
                     android:textColor="@color/colorBlack" />
+
+                <EditText
+                    android:id="@+id/id_distric"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:ems="10"
+                    android:inputType="number"
+                    android:visibility="gone" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -275,8 +283,8 @@
                         android:id="@+id/epr_district"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:entries="@array/city_entries"
-                        android:padding="@dimen/xmin_padding" />
+                        android:padding="@dimen/xmin_padding"
+                        android:spinnerMode="dialog" />
 
                 </LinearLayout>
             </LinearLayout>
@@ -288,13 +296,21 @@
                 android:layout_marginBottom="@dimen/xmin_padding"
                 android:orientation="vertical"
                 android:padding="@dimen/xmin_padding"
-                android:visibility="gone">
+                android:visibility="visible">
 
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="Desa / Kelurahan"
                     android:textColor="@color/colorBlack" />
+
+                <EditText
+                    android:id="@+id/id_village"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:ems="10"
+                    android:inputType="number"
+                    android:visibility="gone" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -307,8 +323,8 @@
                         android:id="@+id/epr_vilagge"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:entries="@array/city_entries"
-                        android:padding="@dimen/xmin_padding" />
+                        android:padding="@dimen/xmin_padding"
+                        android:spinnerMode="dialog" />
 
                 </LinearLayout>
             </LinearLayout>
